# clearbox

./: CONTRIBUTING.md  README.md  pyproject.toml
clearbox/: features.py  features_test.py  formula.py  formula_test.py  training.py  training_test.py  visualization.py
clearbox/metrics/: auroc.py  auroc_test.py  average.py  average_test.py  base.py  ndcg.py  ndcg_test.py  recall.py  recall_test.py
clearbox/models/: base.py  brute_force.py  brute_force_test.py  probabilistic.py  probabilistic_test.py  regression.py  regression_test.py
docs/: index.md
